--- a/VieOnDemo/Base.lproj/Main.storyboard
+++ b/VieOnDemo/Base.lproj/Main.storyboard
@@ -35,6 +35,7 @@
                                 <rect key="frame" x="70" y="428" width="306" height="40"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
@@ -43,21 +44,33 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhk-dQ-AQ8">
-                                <rect key="frame" x="36" y="501" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="26" y="504" width="46" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Quên mật khẩu ?">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="S-1" translatesAutoresizingMaskIntoConstraints="NO" id="oqI-o7-PnM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="S" translatesAutoresizingMaskIntoConstraints="NO" id="oqI-o7-PnM">
                                 <rect key="frame" x="36" y="428" width="26" height="40"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="S" translatesAutoresizingMaskIntoConstraints="NO" id="khG-jl-2mh">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="S-1" translatesAutoresizingMaskIntoConstraints="NO" id="khG-jl-2mh">
                                 <rect key="frame" x="36" y="374" width="26" height="40"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ul1-UG-14F">
                                 <rect key="frame" x="0.0" y="44" width="414" height="322"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2rH-8Y-IsG">
-                                <rect key="frame" x="184" y="546" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="155" y="544" width="104" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                <state key="normal" title="Đăng Nhập">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -72,9 +85,9 @@
                             <constraint firstItem="khG-jl-2mh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="330" id="Ggz-KD-v0I"/>
                             <constraint firstItem="3D3-9a-IiV" firstAttribute="top" secondItem="Ul1-UG-14F" secondAttribute="bottom" constant="8" id="HVG-b1-mmM"/>
                             <constraint firstItem="3D3-9a-IiV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="16" id="MAE-Sr-7aX"/>
-                            <constraint firstItem="dhk-dQ-AQ8" firstAttribute="top" secondItem="oqI-o7-PnM" secondAttribute="bottom" constant="33" id="WBa-Jw-YaA"/>
-                            <constraint firstItem="2rH-8Y-IsG" firstAttribute="top" secondItem="vmz-YU-cfx" secondAttribute="bottom" constant="78" id="b3e-Wm-Qgp"/>
-                            <constraint firstItem="oqI-o7-PnM" firstAttribute="leading" secondItem="dhk-dQ-AQ8" secondAttribute="leading" id="dDd-Ua-gde"/>
+                            <constraint firstItem="dhk-dQ-AQ8" firstAttribute="top" secondItem="oqI-o7-PnM" secondAttribute="bottom" constant="36" id="WBa-Jw-YaA"/>
+                            <constraint firstItem="2rH-8Y-IsG" firstAttribute="top" secondItem="vmz-YU-cfx" secondAttribute="bottom" constant="76" id="b3e-Wm-Qgp"/>
+                            <constraint firstItem="oqI-o7-PnM" firstAttribute="leading" secondItem="dhk-dQ-AQ8" secondAttribute="leading" constant="10" id="dDd-Ua-gde"/>
                             <constraint firstItem="khG-jl-2mh" firstAttribute="leading" secondItem="oqI-o7-PnM" secondAttribute="leading" id="eif-EI-cjU"/>
                             <constraint firstItem="vmz-YU-cfx" firstAttribute="centerX" secondItem="2rH-8Y-IsG" secondAttribute="centerX" constant="16" id="gcN-oS-hAo"/>
                             <constraint firstItem="Ul1-UG-14F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="h2h-bi-NTK"/>
@@ -88,6 +101,7 @@
                     </view>
                     <connections>
                         <outlet property="background" destination="Ul1-UG-14F" id="PXQ-4l-fiT"/>
+                        <outlet property="btnLogin" destination="2rH-8Y-IsG" id="Gxs-Pd-eo3"/>
                         <outlet property="txtPass" destination="vmz-YU-cfx" id="ZwH-Wp-5Ll"/>
                         <outlet property="txtPhone" destination="3D3-9a-IiV" id="WkZ-k8-QaY"/>
                     </connections>
